0.79
- ADD joingps_s para juntar dos ficheros basado en el
fechado GPS, soporta streams.
- ADD listersacsic_s para imprimir los sac/sic contenidos
en una grabación, soporta streams.
- ADD timeout en los uploads por ftp del curl
- ADD a cast to curl_easy_setopt -> (curl_off_t)
- ADD llamada a setsockopt para cambiar tamaño de buffer
 de recepción a 128Kb
- SOPORTE: ampliado el número máximo de radares a 128
- BUG: comprobar que no nos pasamos del número máximo
de radares definidos.

0.78
- ADD: añadido filtercat_s, filtersacsic_s y cleanast_s,
 usando streams, permitiendo pipes y sin tener que usar
 archivos temporales.
- SOPORTE: corregidos un montón de fallos y warnings al
 compilar con gcc v7.
- SOPORTE: añadido una segunda pareja de sac/sic para los
 filtros de filtersacsic (solo añadir, para el caso de
 extraer radar+adsb de una grabación multiradar).
- SOPORTE: añadida configuración por defecto para problemas
 en radares con psr, grabaciones mssrs,scdi y lan ext.
- BUG: filtercat_s y filtersacsic_s no soportaban sac=0
- SOPORTE: 0.0.0.0 como ip de origen para grabar todo lo
 que llegue a ese grupo mcast.

0.77
- TIP: para quitar la sequencias ansi al activar dest_debug
 o dest_screen_crc, podemos usar sed:
 reader_network64 example.conf | sed -r "s/\x1B\[([0-9]{1,3}(;[0-9]{1,2})?)?[mGK]//g" | tee file.txt
- BUG: al decodificar cat48 que iba encadenada en el mismo
 paquete udp, solo se decodificaba a localhost el primer
 datarecord, el segundo se perdía (a la función de decodifi-
 car ast48f se enviaban unos índices antiguos del paquete.
- SOPORTE: añadido un dest_debug, para sacar por stderr el
 paquete que se procesa

0.76
- SOPORTE: añadido dest_file_nodirectory para no crear
 directorios con timestamp, pero si un nombre de fichero
 con fecha.
- NO! SOPORTE: hace rejoin de los grupos mcast cada 90 segundos.
 Esta idea no funciona, no se puede hacer un rejoin sin cerrar
 el socket y perder datos.

0.75c
- BUG: quitado el debug para corregir I048/090